# FlexFlow

./: .clang-format  .clang-format-15  .clang-format-for-format-sh  .clang-tidy-15  .clang-tidy-for-linting.yml  .dockerignore  .editorconfig  .gitattributes  .gitignore  .gitmodules  .ignore  .proj.toml  .readthedocs.yaml  0223-catalyst-llama2-cuda_graph-bs64-tp4-fullchatgpt.csv  0223-catalyst-llama2-cuda_graph-bs64-tp4-prompt2.csv  0223-catalyst-llama2-inference-bs64-tp4-fullchatgpt.csv  0223-catalyst-llama2-inference-bs64-tp4-prompt2.csv  CHANGELOG.md  CMakeLists.txt  CMakeLists.txt.old  CONTRIBUTING.md  FlexFlow.mk  INSTALL.md  INTERNALS.md  MANIFEST.in  MULTI-NODE.md  Makefile  PR-README.md  README.md  README_main.md  SERVE.md  TRAIN.md  alexnet.cc  baichuan.py  baicuan.py  batch_norm.cu  bb.py  cmake.sh  cnn.cc  cnn.h  (+63 more)
cmake/pip_install/: CMakeLists.txt
examples/AlexNet/: CMakeLists.txt  Makefile  alexnet.cc  alexnet.cu  alexnet.h
examples/InceptionV3/: CMakeLists.txt  Makefile  inception.cc  inception.h
examples/ResNet/: CMakeLists.txt  Makefile  resnet.cc  resnet.cu
examples/cpp/AlexNet/: CMakeLists.txt  Makefile  alexnet.cc  alexnet.cu  alexnet.h  alexnetsim.cu
examples/cpp/DLRM/: CMakeLists.txt  Makefile  Makefile.devgpu  Makefile.ec2  dlrm.cc  dlrm.cu  dlrm.h  partition.txt  partition2.txt  preprocess_hdf.py  run_criteo_kaggle.sh  run_random.sh  run_summit.sh  run_summit_large.sh
examples/mnist/: CMakeLists.txt  Makefile  mnist.cc
inference/incr_decoding/: CMakeLists.txt  incr_decoding.cc
inference/peft/: CMakeLists.txt  peft.cc  peft_bwd_benchmark.cc  peft_fwd_benchmark.cc  req_rate_benchmark.cc
inference/spec_infer/: CMakeLists.txt  MODEL_WEIGHTS.md  Makefile  llama.cc  spec_infer.cc
inference/spec_scheduler/: CMakeLists.txt  spec_scheduler_eval.cc
lib/: CMakeLists.txt  README.md
lib/compiler/: CMakeLists.txt
lib/compiler/ffi/: CMakeLists.txt
lib/compiler/src/: basic_graph.h  cost_estimator.cc  deduplicated_priority_queue.h  dominators.h  edge.cc  graph.cc  graph.cc.old  graph.h  graph_optimize_state.cc  graph_structures.h  graph_utils.cc  graph_utils.h  machine_mapping.cc  memory_optimization.cc  node.cc  node.h  optimizations.h.todo  parallel_dim_mapping_record.h  search_helper.cc  search_helper.h  simplification.h  split_types.cc.old  split_types.h  substitution.cc  substitution.h  substitution_logic.cc  substitution_logic.cc.old  substitutions_implementation.h  unity_algorithm.cc  unity_algorithm.cc.old
lib/compiler/test/: CMakeLists.txt  test_cost_estimator.h  test_disjoint_set.cc  test_dominators.cc  test_dp.cc  test_generator.h  test_labelled_open_graph.cc  test_machine_mapping.cc  test_machine_view.cc  test_open_graph.cc  test_optimal_cost.cc  test_parallel_config.cc  test_unity_algorithm.cc
lib/execution/: CMakeLists.txt
lib/execution/src/: metrics_functions.h
lib/ffc/: CMakeLists.txt
lib/ffc/src/: edge.cc  edge.h  graph.cc  graph.h  graph_structures.h  node.cc  node.h  parallel_dim_mapping_record.h  recursive_logger.cc  recursive_logger.h  search_helper.h  simplification.h  substitution.cc  substitution.h  substitution_loader.cc  substitution_logic.cc  substitutions_implementation.h  unity_algorithm.cc
lib/ffi/: CMakeLists.txt
lib/ffi/src/: ffi.cc
lib/ffr/src/: device.h  initializer.h  mapper.h  operator.h  parallel_tensor.h
lib/kernels/: CMakeLists.txt
lib/kernels/src/: accessor.cc  allocation.cc  array_shape.cc  conv_2d_kernels.h  device.cc  device.h  ff_handle.cc  legion_dim.cc  local_allocator.cc  local_cpu_allocator.cc  local_cuda_allocator.cc  managed_ff_stream.cc  managed_handle.cc  managed_per_device_ff_handle.cc  managed_stream.cc  (+2 more)
lib/local-execution/: CMakeLists.txt
lib/model/: CMakeLists.txt
lib/models/: CMakeLists.txt  transformer.cc
lib/op-attrs/: CMakeLists.txt
lib/op-meta/: CMakeLists.txt
lib/pcg/: CMakeLists.txt
lib/runtime/: CMakeLists.txt  op_task_spec.cc
lib/substitution-generator/: CMakeLists.txt
lib/substitutions/: CMakeLists.txt  README.md  TUTORIAL.md
lib/utils/: CMakeLists.txt  Makefile  README.md
python/: CMakeLists.txt  Makefile  Makefile.ff  bindings.cc  ew_mul_example.py  flexflow.py  flexflow_c.cc  flexflow_c.cu  flexflow_c.h  flexflow_c_dev.h  flexflow_c_internal.h  flexflow_cffi_build.py  flexflow_cffi_header.py.in  flexflow_dataloader.cc  flexflow_dataloader.cpp  flexflow_dataloader.cu  flexflow_dataloader.h  flexflow_python.py  flexflow_python_build.py  legion.py  legion_cffi.py.in  legion_cffi_build.py  legion_cffi_header.py.in  legion_python_build.py  legion_top.py  main.cc  register.cc  requirements.txt  setup.py  strategy.pb.cc  strategy.pb.h  test.sh
python/example/: __init__.py  accuracy.py  alexnet.py  alexnet_keras.py  alexnet_new.py  alexnet_torch.py  array_attach.py  cifar10_cnn.py  cifar10_cnn_attach.py  cifar10_cnn_concat.py  cnn_attach.py  cnn_cifar.py  hello.py  inception.py  mlp.py  mlp_attach.py  mlp_keras.py  mlp_keras_func.py  mnist_cnn.py  mnist_mlp.py  mnist_mlp_attach.py  print_input.py  print_layers.py  resnet.py  tensor_attach.py  tensor_transpose.py
python/flexflow/: __init__.py  config.py  driver.py  findpylib.py  flexflow_python  jupyter.py  serve.py  type.py  utils.py
python/hello/: hello.cc  hello.h  hello.py
python/jupyter_notebook/: README.md  flexflow_kernel_nocr.py  install.py
tests/PCA/: CMakeLists.txt  Makefile  pca.cc
tests/unit/: CMakeLists.txt  test_disjoint_set.cc  test_dominators.cc  test_dot.cc  test_machine_view.cc  test_parallel_config.cc  test_random_utils.cc  test_substitution_loader.cc
tools/github_repo_management/: pyproject.toml
tools/substitutions_to_dot/: CMakeLists.txt
tools/tooling/: pyproject.toml
triton/: CMakeLists.txt  Dockerfile.QA  README.md
triton/cmake/: TritonLegionBackendConfig.cmake.in
triton/src/: CMakeLists.txt  Makefile  accessor.h  backend.cc  common.h  config.h  cudahelp.h  instance.cc  instance.h  libtriton_legion.ldscript  model.cc  model.h  onnx_parser.cc  onnx_parser.h  operator.cc  operator.h  runtime.cc  runtime.h  strategy.cc  strategy.h  tensor.cc  tensor.h  types.h
(+6749 files in other folders)
