add_subdirectory(pcg)
add_subdirectory(compiler)
add_subdirectory(runtime)
add_subdirectory(op-attrs)
add_subdirectory(kernels)
add_subdirectory(local-execution)
add_subdirectory(utils)
add_subdirectory(ffi)
add_subdirectory(substitutions)
add_subdirectory(substitution-generator)
add_subdirectory(models)
